// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group block transforms to Columns block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"100%"} -->
<div class="fin-block-column" style="flex-basis:100%"><!-- fin:group -->
<div id="this-is-another-anchor" class="fin-block-group"><!-- fin:paragraph -->
<p>One.</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph -->
<p>Two</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph -->
<p>Three.</p>
<!-- /fin:paragraph --></div>
<!-- /fin:group --></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Group block transforms ungroups block 1`] = `
"<!-- fin:paragraph -->
<p>One.</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph -->
<p>Two</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph -->
<p>Three.</p>
<!-- /fin:paragraph -->"
`;
